--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "tsc && karma start",
     "test-watch": "tsc && karma start --no-single-run --auto-watch",
     "minify": "node node_modules/uglify-js/bin/uglifyjs bundles/ng2-dnd.js -o bundles/ng2-dnd.min.js --source-map bundles/ng2-dnd.min.js.map -c -m",
-    "prepublish": "typings install && tsc && node make.js && npm run minify",
+    "prepublish": "tsc && node make.js && npm run minify",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
@@ -27,20 +27,21 @@
     "url": "https://github.com/akserg/ng2-dnd/issues"
   },
   "main": "index.js",
-  "typings": "index",
   "homepage": "https://github.com/akserg/ng2-dnd#readme",
   "dependencies": {
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.11",
-    "zone.js": "^0.6.17"
+    "rxjs": "5.0.0-beta.12",
+    "zone.js": "^0.6.21"
   },
   "devDependencies": {
-    "@angular/common": "^2.0.0-rc.5",
-    "@angular/compiler": "^2.0.0-rc.5",
-    "@angular/core": "^2.0.0-rc.5",
-    "@angular/platform-browser": "^2.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.5",
+    "@angular/common": "^2.0.0-rc.7",
+    "@angular/compiler": "^2.0.0-rc.7",
+    "@angular/core": "^2.0.0-rc.7",
+    "@angular/platform-browser": "^2.0.0-rc.7",
+    "@angular/platform-browser-dynamic": "^2.0.0-rc.7",
+    "@types/es6-shim": "0.0.31",
+    "@types/jasmine": "^2.2.32",
     "commitizen": "^2.7.6",
     "cz-conventional-changelog": "^1.1.5",
     "jasmine-core": "~2.3.4",
@@ -52,8 +53,7 @@
     "semantic-release": "^4.3.5",
     "systemjs": "~0.19.6",
     "systemjs-builder": "^0.15.6",
-    "typescript": "^1.8.7",
-    "typings": "^0.8.1",
+    "typescript": "^2.0.2",
     "uglify-js": "^2.6.2"
   },
   "config": {
