--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,6 @@
     },
     "exclude": [
         "node_modules",
-        "typings/main.d.ts",
-        "typings/main"
+        "tests"
     ]
 }
