--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "test": "tsc && karma start",
     "test-watch": "tsc && karma start --no-single-run --auto-watch",
     "minify": "node node_modules/uglify-js/bin/uglifyjs bundles/ng2-dnd.js -o bundles/ng2-dnd.min.js --source-map bundles/ng2-dnd.min.js.map -c -m",
-    "prepublish": "typings install && tsc && node make.js && npm run minify",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "prepublish": "tsc && node make.js && npm run minify",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
+    "ngc": ""
   },
   "repository": {
     "type": "git",
@@ -27,7 +28,6 @@
     "url": "https://github.com/akserg/ng2-dnd/issues"
   },
   "main": "index.js",
-  "typings": "index",
   "homepage": "https://github.com/akserg/ng2-dnd#readme",
   "dependencies": {
     "core-js": "^2.4.1",
@@ -36,11 +36,15 @@
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
-    "@angular/common": "2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/core": "2.0.0",
-    "@angular/platform-browser": "2.0.0",
-    "@angular/platform-browser-dynamic": "2.0.0",
+    "@angular/common": "2.2.3",
+    "@angular/compiler": "^2.2.3",
+    "@angular/compiler-cli": "^2.2.3",
+    "@angular/core": "2.2.3",
+    "@angular/platform-browser": "2.2.3",
+    "@angular/platform-browser-dynamic": "2.2.3",
+    "@types/core-js": "^0.9.35",
+    "@types/jasmine": "^2.5.38",
+    "@types/node": "^0.0.2",
     "commitizen": "^2.7.6",
     "cz-conventional-changelog": "^1.1.5",
     "jasmine-core": "~2.5.1",
@@ -53,7 +57,6 @@
     "systemjs": "~0.19.27",
     "systemjs-builder": "^0.15.6",
     "typescript": "^2.0.2",
-    "typings": "^1.3.3",
     "uglify-js": "^2.6.2"
   },
   "config": {
