--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
   },
   "devDependencies": {
     "@angular/common": "2.2.3",
-    "@angular/compiler": "^2.2.3",
-    "@angular/compiler-cli": "^2.2.3",
+    "@angular/compiler": "2.2.3",
+    "@angular/compiler-cli": "2.2.3",
     "@angular/core": "2.2.3",
     "@angular/platform-browser": "2.2.3",
     "@angular/platform-browser-dynamic": "2.2.3",
@@ -56,7 +56,7 @@
     "semantic-release": "^4.3.5",
     "systemjs": "~0.19.27",
     "systemjs-builder": "^0.15.6",
-    "typescript": "^2.0.2",
+    "typescript": "2.0.2",
     "uglify-js": "^2.6.2"
   },
   "config": {
